Profile manager: Fix bug with trigger editor not removing some events Fix an invalid global css rule Add overflow rules to dialog header Fix dialog header border being hidden by body

--- a/src/css/client.css
+++ b/src/css/client.css
@@ -11,9 +11,12 @@ tt {
   font-size: 1em;
 }
 
+/*
 * {
-  overflow: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+*/
 
 html,
 body {
