--- a/src/css/mapper.css
+++ b/src/css/mapper.css
@@ -184,7 +184,7 @@ a.disabled-link:hover {
 
 #mapper-room-accordion {
   position: absolute;
-  top: 34px;
+  top: 36px;
   left: 0;
   right: 0;
   bottom: 0;
