--- a/src/css/tinymce.css
+++ b/src/css/tinymce.css
@@ -41,7 +41,7 @@
 
 .mce-container-body .mce-edit-area {
   position: absolute;
-  top: 34px;
+  top: 36px;
   /*bottom: 37px;*/
   bottom: 0;
   left: 0;
